# mrs_laser_map

./: LICENSE  README.md  mrs_laser_mapping.rosinstall
ais_laser_filters/: CMakeLists.txt  laser_filters_plugins.xml  package.xml
ais_laser_filters/config/: approx_self_filter.yaml
ais_laser_filters/include/laser_filters/: point_cloud_footprint_filter.h  point_cloud_jump_edge_filter.h  point_cloud_self_filter_tf.h  point_types.h  scan_shadows_filter.h
ais_laser_filters/launch/: approx_self_filter.launch
ais_laser_filters/src/: cloud_to_cloud_filter_chain.cpp  pointcloud_filters.cpp
cloud_compression/: CMakeLists.txt  nodelet_plugin.xml  package.xml
cloud_compression/include/cloud_compression/: octree_pointcloud_compression.h
cloud_compression/src/: compression.cpp  octree_pointcloud_compression.hpp  xyz_compression.cpp  xyz_compression.h  xyz_decompression.cpp  xyz_decompression.h
config_server/: CMakeLists.txt  package.xml
config_server/include/config_server/: configserver.h  parameter.h  parameterclient.h
config_server/launch/: example.launch
config_server/msg/: ParameterDescription.msg  ParameterList.msg  ParameterValue.msg  ParameterValueList.msg
config_server/src/: configserver.cpp  parameter.cpp  parameterclient.cpp
config_server/srv/: GetParameter.srv  SetParameter.srv  ShowDeadVars.srv  Subscribe.srv  SubscribeList.srv
mod_laser_filters/: CMakeLists.txt  laser_filters_plugins.xml  package.xml
mod_laser_filters/include/filters/: filter_base.h
mod_laser_filters/include/laser_filters/: approx_self_filter.h  scan_self_shadows_filter.h
mod_laser_filters/src/: laser_scan_filters.cpp
mrs_laser_mapping/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mrs_laser_mapping/cmake/Modules/: FindCSparse.cmake  FindG2O.cmake  FindGSL.cmake
mrs_laser_mapping/config/: config_mav_inventairy.yaml  config_momaro_velodyne.yaml  config_velodyne.yaml  dji_velodyne_filter.yaml  laser_shadow_filter.yaml  momaro_velodyne_filter.yaml  self_filter_frames.yaml
mrs_laser_mapping/include/: map_nodelet.h  scan_assembler_nodelet.h  slam_nodelet.h  slam_visualizer_nodelet.h  velodyne_assembler_nodelet.h
mrs_laser_mapping/include/mrs_laser_mapping/: color_utils.h  graph_publisher.h  map_publisher.h  slam_graph.h  surfelmap_publisher.h  trajectory_publisher.h
mrs_laser_mapping/include/mrs_laser_mapping/impl/: graph_publisher.hpp  map_publisher.hpp  surfelmap_publisher.hpp
mrs_laser_mapping/include/mrsmap/: slam.h
mrs_laser_mapping/launch/: april_mapping.launch  euroc_mapping.launch  euroc_mapping.rviz  mav_mapping.launch  mav_mapping.rviz  mav_tf_remap.launch  mav_valgrind.launch  momaro_mapping.launch  momaro_mapping.rviz  momaro_velodyne.rviz  momaro_velodyne_bag.launch  momaro_velodyne_mapping.launch  mrs_laser_mapping.rviz  test_bag.launch  velodyne_mapping.launch  velodyne_mapping.rviz
mrs_laser_mapping/msg/: KeyFrame.msg  KeyFrameTransforms.msg  MultiResolutionMap.msg  MultiResolutionMapMsg.msg
mrs_laser_mapping/src/: map_publisher.cpp  slam_graph.cpp  surfelmap_publisher.cpp  trajectory_publisher.cpp
mrs_laser_mapping/src/mrsmap/: slam.cpp
mrs_laser_mapping/src/nodes/: map_nodelet.cpp  scan_assembler_nodelet.cpp  slam_nodelet.cpp  slam_visualizer_nodelet.cpp  velodyne_assembler_nodelet.cpp
mrs_laser_mapping/srv/: AddKeyFramesByDistance.srv  AddPointsToMap.srv  DeleteMarkedPoints.srv  InterestPointsSwitchHand.srv  SelfFilter.srv
mrs_laser_maps/: CMakeLists.txt  package.xml
mrs_laser_maps/include/impl/: map_level.hpp  map_multiresolution.hpp
mrs_laser_maps/include/mrs_laser_maps/: cell_buffer.h  grid_cell.h  grid_cell_with_statistics.h  map_level.h  map_multiresolution.h  map_point_types.h  multiresolution_surfel_registration.h  surfel.h  surfel_map_interface.h  synchronized_circular_buffer.h
mrs_laser_maps/src/: map_multiresolution.cpp  multiresolution_surfel_registration.cpp
mrs_laser_maps/tests/: interface_test.cpp  map_test.cpp
parameter_tuner/: CMakeLists.txt  package.xml  plugin_rqt_gui.xml
parameter_tuner/include/: parameteritem.h  parametertuner.h
parameter_tuner/src/: parameteritem.cpp  parametertuner.cpp  parametertuner.ui
