<package format="2">
	<name>cloud_compression</name>
	<description>Nodelets for compression of point clouds</description>
	<version>0.0.1</version>
	<license>BSD</license>
	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>pcl_ros</depend>
	<depend>nodelet</depend>

	<depend>laser_mapping</depend>
	<export>
		<nodelet plugin="${prefix}/nodelet_plugin.xml" />
	</export>
</package>
