<?xml version="1.0"?>
<package format="2">
  <name>mrs_laser_mapping</name>
  <version>1.0.0</version>
  
  <description >mrs_laser_mapping</description>

  <maintainer email="droeschel@ais.uni-bonn.de">David Droeschel</maintainer>
  <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/mrs_laser_mapping</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>laser_geometry</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>config_server</depend>
  <depend>cloud_compression</depend>
  <depend>eigen_conversions</depend>
  <depend>mrs_laser_maps</depend>

  <build_export_depend>message_runtime</build_export_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
   <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>


