<?xml version="1.0"?>
<package>
  <name>mrs_laser_maps</name>
  <version>0.0.1</version>
  
  <description >mrs_laser_maps</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->  
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->

  <maintainer email="droeschel@ais.uni-bonn.de">David Droeschel</maintainer>
  <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <url>http://ros.org/wiki/MRSLaserMaps</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>config_server</build_depend>
  <build_depend>momaro_heightmap</build_depend>
  <build_depend>cloud_compression</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>config_server</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>


