<?xml version="1.0"?>
<package format="2">
  <name>mrs_laser_maps</name>
  <version>0.0.1</version>
  
  <description >mrs_laser_maps</description>

  <maintainer email="droeschel@ais.uni-bonn.de">David Droeschel</maintainer>
  <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/MRSLaserMaps</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!-- <depend>std_msgs</depend>
  <depend>tf</depend> 
  <depend>pcl_ros</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_msgs</depend> -->
  
  <depend>rosunit</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_conversions</depend>
  
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>


